# model-quantization-agent

./: .env.example  .gitignore  MANIFEST.in  README.md  agent_flowchart.html  constraints.txt  pyproject.toml
.agents/skills/_shared/: load_env.sh
.agents/skills/quant/: SKILL.md
.agents/skills/quant-execute/: SKILL.md
.agents/skills/quant-execute/scripts/: launch_job.py
.agents/skills/quant-setup/: SKILL.md
.agents/skills/quant-tune/: SKILL.md
.agents/skills/quant/reference/: gpu_specs.yaml  method_capabilities.yaml  model_aliases.yaml
.agents/skills/quant/scripts/: method_env.py
.claude/skills/_shared/: load_env.sh
.claude/skills/quant/: SKILL.md
.claude/skills/quant-execute/: SKILL.md
.claude/skills/quant-setup/: SKILL.md
.claude/skills/quant-tune/: SKILL.md
.claude/skills/quant-tune/reference/: measure.py
.claude/skills/quant/reference/: methods.yaml  pipeline_contract.md
.github/workflows/: ci.yml
docs/: architecture.md  ec2.md  method-capabilities.md
reports/: Qwen2.5-0.5B_bnb_llm_int8_g5xlarge.md  Qwen2.5-0.5B_smoothquant_g5xlarge.md
scripts/: bootstrap_ec2.sh  check_generated_assets.py
seed/: aws_instances.yaml  gpu_specs.yaml  methods.yaml
src/quant_agent/: adapt_agent.py  adapt_only.py  adapt_stages.py  agent.py  baseline.py  cli.py  compatibility.py  config.py  execution_policy.py  executor.py  fix_agent.py  hardware_probe.py  hyperparam_inference.py  ingest.py  io_utils.py  llm.py  measurement.py  orchestrator.py  pareto.py  port_overlay.py  reproducibility.py  research_agent.py  retrieval.py  runtime_deps.py  schemas.py  setup_cmd.py  tune_agent.py  tune_history.py
src/quant_agent/data/: __init__.py  methods.yaml
src/quant_agent/templates/: awq.py.j2  bnb_nf4.py.j2  gptq.py.j2  hqq.py.j2
src/quant_agent/tools/: __init__.py  arxiv_tool.py  aws_instance.py  executor_tools.py  github_tool.py  gpu_info.py  hf_hub.py  model_alias.py  model_arch.py  paper.py  rag.py  recommender.py  repo_tool.py  script_generator.py  script_io.py  torch_spec.py
tests/: conftest.py  test_adapt_agent.py  test_adapt_stages.py  test_aws_instance.py  test_cli.py  test_compatibility.py  test_executor.py  test_fix_agent.py  test_github_tool.py  test_hardware_probe.py  test_hf_hub.py  test_hyperparam_inference.py  test_llm.py  test_measurement.py  test_model_alias.py  test_model_arch.py  test_no_rag.py  test_orchestrator.py  test_paper.py  test_pareto.py  test_port_overlay.py  test_recommender.py  test_research_agent.py  test_research_validation.py  test_script_generator.py  test_script_io.py  test_security_fixes.py  test_setup_cmd.py  test_skill_assets.py  test_torch_spec.py  test_tune_agent.py  test_tune_history.py
(+3 files in other folders)
