[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-agent"
version = "0.1.0"
description = "LangChain agent that recommends and generates quantization scripts for HuggingFace LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-qdrant>=0.2",
    "langchain-voyageai>=0.1",
    "langchain-community>=0.3",
    "langgraph>=0.2",
    "qdrant-client>=1.9",
    "boto3>=1.34",
    "huggingface_hub>=0.25",
    "arxiv>=2.1",
    "pypdf>=4.0",
    "pymupdf>=1.24",
    "pyyaml>=6",
    "requests>=2.31",
    "python-dotenv>=1",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3.12"]

[project.scripts]
quant-agent = "quant_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
